--- a/PCB/NXP/ciaa-nxp.cmp
+++ b/PCB/NXP/ciaa-nxp.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by PcbNew date = 03/09/2014 18:05:35
+Cmp-Mod V01 Created by PcbNew date = Mon 16 Feb 2015 04:59:39 PM ART
 
 BeginCmp
 TimeStamp = /52C1CAF4/52C1CFDF;
@@ -123,7 +123,7 @@ BeginCmp
 TimeStamp = /52C2B8A1/52B78C68;
 Reference = C17;
 ValeurCmp = 330uF;
-IdModule  = c_elec_6.3x7.7;
+IdModule  = c_elec_8x10;
 EndCmp
 
 BeginCmp
@@ -1572,7 +1572,7 @@ BeginCmp
 TimeStamp = /52C2B8A1/52B78B09;
 Reference = L2;
 ValeurCmp = 47uH;
-IdModule  = Inductor_10x9.8mm;
+IdModule  = SRN1060;
 EndCmp
 
 BeginCmp
@@ -2846,7 +2846,7 @@ BeginCmp
 TimeStamp = /532C7A7B/532A7FD5;
 Reference = TH10;
 ValeurCmp = MF-USMF005-2;
-IdModule  = MF-USMF;
+IdModule  = MF-MSMF;
 EndCmp
 
 BeginCmp
@@ -3063,35 +3063,35 @@ BeginCmp
 TimeStamp = /52C2B8A1/52CA0AD0;
 Reference = ZA1;
 ValeurCmp = P6SMB33CA;
-IdModule  = DO-214AC(SMA);
+IdModule  = -SMB;
 EndCmp
 
 BeginCmp
 TimeStamp = /52C8476B/52C0BFC0;
 Reference = ZA2;
 ValeurCmp = SMBJ20CA;
-IdModule  = DO-214AA(SMB);
+IdModule  = -SMB;
 EndCmp
 
 BeginCmp
 TimeStamp = /52C8476B/52D7524D;
 Reference = ZA3;
 ValeurCmp = SMBJ20CA;
-IdModule  = DO-214AA(SMB);
+IdModule  = -SMB;
 EndCmp
 
 BeginCmp
 TimeStamp = /52C8476B/52D752DB;
 Reference = ZA4;
 ValeurCmp = SMBJ20CA;
-IdModule  = DO-214AA(SMB);
+IdModule  = -SMB;
 EndCmp
 
 BeginCmp
 TimeStamp = /52C8476B/52D75369;
 Reference = ZA5;
 ValeurCmp = SMBJ20CA;
-IdModule  = DO-214AA(SMB);
+IdModule  = -SMB;
 EndCmp
 
 BeginCmp
